# wsi-tissue-pipeline

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  constraints.txt  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
configs/: colab.yaml  default.yaml  e241_benchmark.yaml  e241_benchmark_actual.yaml  e241_debug_context.yaml  e241_production_default.yaml  sciserver.yaml
configs/database_profiles/: national_database_ometiff.yaml
docker/: Dockerfile  Dockerfile.gpu  docker-compose.gpu.yml  docker-compose.yml
docs/: colab_guide.md  conf.py  configuration.md  contributing.md  credits.md  docker_guide.md  emlddmm_notebook_parity.md  emlddmm_registration.md  environment.yml  index.md  installation.md  mapping_engine_pr1_checklist.md  ometiff_benchmark_runbook.md  pipeline_overview.md  requirements.txt  sciserver_guide.md  source_level_0_production_runbook.md
docs/_static/: README.md
docs/_templates/autosummary/: module.rst
docs/api/: index.md
docs/examples/: 01_wsi_to_tissue_sections.nblink  02_quality_control.nblink  03_neuroglancer_visualization.nblink  04_emlddmm_preparation.nblink  05_emlddmm_registration.nblink  05b_iemap_atlas_registration.nblink  index.md
docs/submission_factory/: README.md  database_profile.md  expert_reviewer_guide.md  operator_guide.md  workflow_contract.md
examples/submission_factory/: example_submission_manifest.csv
notebooks/: 01_wsi_to_tissue_sections.ipynb  02_quality_control.ipynb  03_neuroglancer_visualization.ipynb  04_emlddmm_preparation.ipynb  05_emlddmm_registration.ipynb  05b_iemap_atlas_registration.ipynb  colab_setup.py
scripts/: download_sample_data.py  run_pipeline.py  setup_mlflow.sh
src/wsi_pipeline/: __init__.py  bioformats_runtime.py  cli.py  config.py  demo_data.py  emlddmm_prep.py  etsfile.py  mlflow_utils.py  neuroglancer.py  qc_grid.py  vsi_converter.py  wsi_processing.py
src/wsi_pipeline/omezarr/: __init__.py  ets_writer.py  metadata.py  pyramid.py  streaming.py  writers.py  zarr_compat.py
src/wsi_pipeline/pipeline/: __init__.py  plating.py  vsi_benchmark.py  vsi_ets.py  vsi_ometiff.py
src/wsi_pipeline/precomputed/: __init__.py  cloudvolume.py  plate_writer.py  raw.py  tensorstore.py
src/wsi_pipeline/registration/: __init__.py  backend.py  config.py  orientation.py  outputs.py  provenance.py  report.py  sweep.py  symmetric.py  targets.py  upsample.py  visualization.py  workflow.py
src/wsi_pipeline/sciserver/: __init__.py  environment.py  sciserver_integration.py  sciserver_integration_guide.md  sciserver_lineage.py  sciserver_mlflow.py  sciserver_mlops_compatibility_analysis.md  storage.py  test_sciserver_modules.py
src/wsi_pipeline/segmentation/: __init__.py  appendage.py  component_qc.py  core.py  entropy.py  morphology.py  otsu.py  segmenter.py  stain.py
src/wsi_pipeline/submission/: README.md  __init__.py  manifests.py  models.py  ometiff_package_plan.py  ometiff_validation.py  preflight.py  profiles.py  setup.py  source_paths.py  statuses.py  tissue_plan.py  validation.py
src/wsi_pipeline/surface/: __init__.py  io.py  registration.py  resampling.py  resampling_utils.py  seg_to_surf_test2.ipynb  surface_generation.py  visualization.py
src/wsi_pipeline/tiles/: __init__.py  generator.py  io.py  naming.py
tests/: conftest.py  test_appendage_refinement.py  test_bioformats_runtime.py  test_component_qc.py  test_emlddmm_checkout_resolver.py  test_etsfile.py  test_omezarr_writers.py  test_plating_metadata.py  test_processing.py  test_qc_grid.py  test_surface.py  test_vsi_benchmark.py  test_vsi_converter_ometiff.py  test_vsi_ets_pipeline.py  test_vsi_ometiff_benchmark.py  test_zarr_reader_compat.py
tests/registration/: test_backend.py  test_external_backend_integration.py  test_manifest.py  test_orientation.py  test_python_compat.py  test_step5_cli.py  test_sweep.py  test_targets.py  test_upsample.py  test_visualization.py  test_workflow.py
tests/submission/: test_database_profiles.py  test_ometiff_package_plan.py  test_ometiff_validation.py  test_submission_manifest.py  test_submission_models.py  test_submission_preflight.py  test_submission_setup.py  test_tissue_plan.py
